add: CG4Task3クラスの実装と関連機能の追加
- DX12Helper.cppおよびDX12Helper.hの変更:
  - Microsoft::WRL::ComPtrからComPtrへの変更により、コードが簡素化されました。
  - d3dx12.hがインクルードされ、DirectX 12のヘルパー関数が利用可能になりました。
  - CreateDevice、PauseError、CreateDescriptorHeapなどの関数が修正され、引数の型が変更されました。
  - LoadTexture関数が削除され、LoadImageFromFile関数が追加され、テクスチャの読み込み方法が改善されました。

- SRVManager.cppおよびSRVManager.hの変更:
  - CreateForTexture2D関数に加え、CreateForCubemap関数が追加され、キューブマップテクスチャのSRVを作成できるようになりました。

- TextureManager.cppおよびTextureManager.hの変更:
  - LoadTexture関数が修正され、GetTextureType関数が追加されました。
  - UploadTextureData関数が変更され、引数にコマンドリストとデバイスを追加しました。

- Object3d.PS.hlslおよびObject3d.cppの変更:
  - Material構造体にenvironmentCoefficientが追加され、環境光の影響を受けるようになりました。
  - DebugWindow関数に環境係数のスライダーが追加されました。

- NimaFramework.cppおよびNimaFramework.hの変更:
  - CubemapSystemの初期化が追加され、システム全体の初期化プロセスが強化されました。

- Skybox関連の変更:
  - Skyboxクラスが新たに追加され、キューブマップの描画機能が実装されました。

- その他の変更:
  - シェーダー関連のファイルが追加され、Skyboxの描画に必要なシェーダーが実装されました。
  - プロジェクトファイルに新しいソースファイルが追加され、Cubemap機能がプロジェクトに統合されました。

- バイナリファイルの変更:
  - rostock_laage_airport_4k.ddsが追加され、環境テクスチャとして使用されます。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -239,6 +239,8 @@
     <ClCompile Include="Features\Collision\Collider\Collider.cpp" />
     <ClCompile Include="Features\Collision\Manager\CollisionManager.cpp" />
     <ClCompile Include="Features\CSV\CSVLoader.cpp" />
+    <ClCompile Include="Features\Cubemap\CubemapSystem.cpp" />
+    <ClCompile Include="Features\Cubemap\Skybox.cpp" />
     <ClCompile Include="Features\DeltaTimeManager\DeltaTimeManager.cpp" />
     <ClCompile Include="Features\Easing\Easing.cpp" />
     <ClCompile Include="Features\Easing\Easing_impl.cpp" />
@@ -346,6 +348,8 @@
     <ClInclude Include="Features\Collision\Shape.h" />
     <ClInclude Include="Features\CSV\CSVLoader.h" />
     <ClInclude Include="Features\CSV\csvStructure\CSVData.h" />
+    <ClInclude Include="Features\Cubemap\CubemapSystem.h" />
+    <ClInclude Include="Features\Cubemap\Skybox.h" />
     <ClInclude Include="Features\DeltaTimeManager\DeltaTimeManager.h" />
     <ClInclude Include="Features\Easing\Easing.h" />
     <ClInclude Include="Features\Easing\Manager\EasingManager.h" />
@@ -447,6 +451,11 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </None>
     <None Include="EngineResources\Shaders\Particle.hlsli">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </None>
+    <None Include="EngineResources\Shaders\Skybox.hlsli">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
@@ -638,6 +647,16 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
     <FxCompile Include="EngineResources\Shaders\SkinningObject3d.VS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\Skybox.PS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\Skybox.VS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
