--- a/SampleProject/SampleProject.vcxproj.filters
+++ b/SampleProject/SampleProject.vcxproj.filters
@@ -52,6 +52,9 @@
     <Filter Include="Game\Scene\TL1Task1">
       <UniqueIdentifier>{b9c7f1db-d66c-4da3-a97c-04f9b04567f7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\Scene\CG4Task3">
+      <UniqueIdentifier>{f6186dba-1c05-4d32-a8a8-01c64b7bdf72}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -93,6 +96,9 @@
     <ClCompile Include="Scene\TL1Task1\TL1Task1.cpp">
       <Filter>Game\Scene\TL1Task1</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\CG4Task3\CG4Task3.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SampleProgram\SampleProgram.h">
@@ -130,6 +136,9 @@
     </ClInclude>
     <ClInclude Include="Scene\TL1Task1\TL1Task1.h">
       <Filter>Game\Scene\TL1Task1</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\CG4Task3\CG4Task3.h">
+      <Filter>Game\Scene\CG4Task3</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
