change: Getterメソッドの戻り値型変更とUI改善
* **DirectX12.h**
  - `GetViewport`と`GetScissorRect`の戻り値を参照型に変更し、コピーのオーバーヘッドを削減。

* **DirectX12_Impl.cpp**
  - `ResizeBuffers`メソッドにビューポートとスカイシルの設定を追加。

* **PostEffect.cpp**
  - `NewFrame`メソッドでビューポートとスカイシルの設定を`pDx12_`から取得するように変更。
  - `ObtainInstances`メソッドでビューポートとスカイシルのメンバー変数を削除。

* **PostEffect.h**
  - ビューポートとスカイシルのメンバー変数を削除。

* **SRVManager.cpp**
  - `CreateForCubemap`メソッドでSRVのフォーマットを引数の`_format`に変更。

* **TextureManager.cpp**
  - `UnloadTexture`メソッドを追加し、テクスチャのアンロード処理を実装。

* **TextureManager.h**
  - `UnloadTexture`メソッドの宣言と`ReloadTexture`メソッドをインラインで追加。

* **DebugManager.cpp**
  - `Window_ObjectList`メソッドで未カテゴリのコンポーネントの表示方法を変更。

* **DebugManager.h**
  - デバッグ用のマクロを追加し、デバッグ情報の表示を強化。

* **Skybox.cpp**
  - `Finalize`メソッドを`const`修飾子を持つように変更し、デバッグウィンドウの登録と解除を追加。
  - `_ImGui`メソッドを追加し、デバッグ用のUIを実装。

* **SceneObjects.cpp**
  - デバッグ用の`ImGuiTextTransform`メソッドを追加し、オブジェクトの変換情報を表示。

* **GltfModel.cpp**
  - `Initialize`メソッドで`is_called_finalize_`を初期化。

* **ModelManager.cpp**
  - `Load`メソッドでモデルがすでにロードされているか確認する処理を追加。

* **ModelStorage.cpp**
  - `AddModel`メソッドのモデル追加処理を修正。

* **SampleProgram.cpp**
  - `Initialize`メソッドからモデルのロード処理を削除。

* **その他**
  - SampleProject.vcxprojに新しいJSONリソースファイルを追加。
  - imgui.iniのウィンドウの位置やサイズを変更し、レイアウトを調整。

--- a/SampleProject/SampleProject.vcxproj
+++ b/SampleProject/SampleProject.vcxproj
@@ -215,6 +215,9 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Scene\PG3PT1\PG3PT1.h" />
     <ClInclude Include="Scene\TL1Task1\TL1Task1.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Json\.engine\config.json" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
