feat: 新しいグリッドオブジェクトの作成機能追加
* `Engine.vcxproj` と `Engine.vcxproj.filters` に `Preset_Grid.cpp` と `Preset_Grid.h` を追加し、関連するフィルタを設定しました。
* `Input.cpp` では、キーボードとマウスの情報取得の開始処理を追加し、ゲームパッドの初期化と更新処理を実装しました。また、デバイスの状態を更新するための新しいメソッドを追加しました。
* `Object3d` クラスに `Option` 構造体を追加し、オブジェクトの変換、マテリアル、タイルデータ、ライティングデータを管理するようにしました。これに伴い、オブジェクトの初期化やプロパティの設定方法を変更しました。
* `NimaFramework` において、オブジェクト3Dシステムの初期化処理をメソッドとして分離し、環境テクスチャの設定を追加しました。
* `CG4Task1.cpp`、`CG4Task2.cpp`、`CG4Task3.cpp`、`CG5Task1.cpp`、`GameScene.cpp` で、グリッドオブジェクトの初期化を `presets::grid::Create` メソッドを通じて行うように変更しました。

* `config.json` では、`start_scene` の値を `CG4Task3` から `CG4Task2` に変更しました。
* `Cleanup.ps1` スクリプトに、特定のディレクトリやファイルを削除するためのコマンドを追加しました。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -289,6 +289,7 @@
     <ClCompile Include="Features\TimeMeasurer\TimeMeasurer.cpp" />
     <ClCompile Include="Features\Viewport\Viewport.cpp" />
     <ClCompile Include="Framework\NimaFramework.cpp" />
+    <ClCompile Include="Presets\Object3d\Grid\Preset_Grid.cpp" />
     <ClCompile Include="Scene\Args\SceneArgs.cpp" />
     <ClCompile Include="Scene\SceneBase.cpp" />
     <ClCompile Include="Type\Color.cpp" />
@@ -413,6 +414,7 @@
     <ClInclude Include="Interfaces\ISceneFactory.h" />
     <ClInclude Include="Math\Functions.hpp" />
     <ClInclude Include="Math\Transform.h" />
+    <ClInclude Include="Presets\Object3d\Grid\Preset_Grid.h" />
     <ClInclude Include="Scene\Args\SceneArgs.h" />
     <ClInclude Include="Scene\SceneBase.h" />
     <ClInclude Include="Type\Color.h" />
