--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -120,6 +120,11 @@ Pos=60,60
 Size=281,182
 Collapsed=0
 
+[Window][Controller]
+Pos=23,260
+Size=215,59
+Collapsed=0
+
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
