--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -337,6 +337,9 @@
     <Filter Include="Preset\Object3d\Grid">
       <UniqueIdentifier>{b301e74a-e41d-4a55-b4bc-e3567fa912d8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="DebugTools\DebugEntry">
+      <UniqueIdentifier>{758042fc-2bde-4ae2-8db7-ae2811523059}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DebugTools\DebugManager\DebugManager.cpp">
@@ -1024,6 +1027,9 @@
     </ClInclude>
     <ClInclude Include="Presets\Object3d\Grid\Preset_Grid.h">
       <Filter>Preset\Object3d\Grid</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugTools\DebugEntry\DebugEntry.h">
+      <Filter>DebugTools\DebugEntry</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
