--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -1,13 +1,13 @@
 [Window][Debug##Default]
-Pos=326,177
+Pos=101,-7
 Size=191,291
 Collapsed=0
 
 [Window][Log]
-Pos=0,17
-Size=16,22
+Pos=17,25
+Size=15,7
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000E,0
 
 [Window][Objects]
 Pos=29,0
@@ -32,9 +32,10 @@ Size=18,27
 Collapsed=0
 
 [Window][SceneManager]
-Pos=278,535
-Size=522,63
+Pos=0,943
+Size=427,66
 Collapsed=0
+DockId=0x00000010,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,0
@@ -52,10 +53,10 @@ Size=97,64
 Collapsed=0
 
 [Window][DebugInfoBar]
-Pos=24,17
-Size=8,22
+Pos=17,0
+Size=15,15
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000007,0
 
 [Window][DebugInfo]
 Pos=26,25
@@ -64,16 +65,16 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Viewport]
-Pos=9,0
+Pos=17,17
 Size=6,22
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x0000000A,0
 
 [Window][NiUI_DebugInfo]
-Pos=17,0
-Size=15,44
+Pos=8,0
+Size=7,44
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000005,1
 
 [Window][Component data]
 Pos=17,0
@@ -82,10 +83,10 @@ Collapsed=0
 DockId=0x00000009,2
 
 [Window][EventTimer]
-Pos=18,17
-Size=4,22
+Pos=25,21
+Size=7,4
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000C,0
 
 [Window][Dear ImGui Debug Log]
 Pos=60,60
@@ -93,22 +94,22 @@ Size=537,375
 Collapsed=0
 
 [Window][Performance]
-Pos=24,25
-Size=8,22
+Pos=25,17
+Size=7,4
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x00000006,0
 
 [Window][Debug]
-Pos=17,0
-Size=15,22
+Pos=8,0
+Size=7,32
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000005,0
 
 [Window][Components]
 Pos=0,0
-Size=7,22
+Size=6,32
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000004,0
 
 [Window][並び替え可能なリスト]
 Pos=53,535
@@ -758,21 +759,23 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selected=0x13926F0B
-  DockNode          ID=0x0000000A Parent=0xD5ACB325 SizeRef=1600,761 Split=X
-    DockNode        ID=0x0000000C Parent=0x0000000A SizeRef=1545,900 Split=Y
-      DockNode      ID=0x00000001 Parent=0x0000000C SizeRef=1600,708 Split=X Selected=0x13926F0B
-        DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=0,0 Split=X Selected=0x13926F0B
-          DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=135,657 Selected=0xFCB30AB3
-          DockNode  ID=0x00000011 Parent=0x00000003 SizeRef=1408,657 CentralNode=1 Selected=0x13926F0B
-        DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=534,450 Selected=0x8EDA8100
-      DockNode      ID=0x00000002 Parent=0x0000000C SizeRef=1600,241 Selected=0x64F50EE5
-    DockNode        ID=0x00000006 Parent=0x0000000A SizeRef=373,900 Selected=0x392A5ADD
-  DockNode          ID=0x0000000B Parent=0xD5ACB325 SizeRef=1600,246 Split=X Selected=0x64F50EE5
-    DockNode        ID=0x0000000E Parent=0x0000000B SizeRef=1189,241 Split=X Selected=0x3A93B30B
-      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=963,241 Selected=0x64F50EE5
-      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=224,241 Selected=0x3A93B30B
-    DockNode        ID=0x0000000F Parent=0x0000000B SizeRef=409,241 Split=Y Selected=0x60B79D0E
-      DockNode      ID=0x0000000D Parent=0x0000000F SizeRef=409,73 Selected=0x8EDA8100
-      DockNode      ID=0x00000010 Parent=0x0000000F SizeRef=409,171 Selected=0x60B79D0E
+DockSpace               ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=X Selected=0x13926F0B
+  DockNode              ID=0x00000011 Parent=0xD5ACB325 SizeRef=394,900 Split=Y Selected=0x392A5ADD
+    DockNode            ID=0x0000000F Parent=0x00000011 SizeRef=298,941 Split=X Selected=0x392A5ADD
+      DockNode          ID=0x00000004 Parent=0x0000000F SizeRef=126,941 Selected=0xFCB30AB3
+      DockNode          ID=0x00000005 Parent=0x0000000F SizeRef=266,941 Selected=0x392A5ADD
+    DockNode            ID=0x00000010 Parent=0x00000011 SizeRef=298,66 Selected=0x84527237
+  DockNode              ID=0x00000012 Parent=0xD5ACB325 SizeRef=1198,900 Split=Y
+    DockNode            ID=0x00000001 Parent=0x00000012 SizeRef=1600,708 Split=X Selected=0x13926F0B
+      DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=0,0 Split=Y Selected=0x13926F0B
+        DockNode        ID=0x00000007 Parent=0x00000003 SizeRef=1106,49 HiddenTabBar=1 Selected=0x8EDA8100
+        DockNode        ID=0x00000008 Parent=0x00000003 SizeRef=1106,849 Split=Y Selected=0x13926F0B
+          DockNode      ID=0x0000000D Parent=0x00000008 SizeRef=1171,531 Split=X Selected=0x13926F0B
+            DockNode    ID=0x0000000A Parent=0x0000000D SizeRef=974,646 CentralNode=1 Selected=0x13926F0B
+            DockNode    ID=0x0000000B Parent=0x0000000D SizeRef=222,646 Split=Y Selected=0x60B79D0E
+              DockNode  ID=0x00000006 Parent=0x0000000B SizeRef=299,94 HiddenTabBar=1 Selected=0x60B79D0E
+              DockNode  ID=0x0000000C Parent=0x0000000B SizeRef=299,435 HiddenTabBar=1 Selected=0x3A93B30B
+          DockNode      ID=0x0000000E Parent=0x00000008 SizeRef=1171,248 HiddenTabBar=1 Selected=0x64F50EE5
+      DockNode          ID=0x00000009 Parent=0x00000001 SizeRef=534,450 Selected=0x8EDA8100
+    DockNode            ID=0x00000002 Parent=0x00000012 SizeRef=1600,241 Selected=0x64F50EE5
 
