--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -292,7 +292,6 @@
     <ClCompile Include="Presets\Object3d\Grid\Preset_Grid.cpp" />
     <ClCompile Include="Scene\Args\SceneArgs.cpp" />
     <ClCompile Include="Scene\SceneBase.cpp" />
-    <ClCompile Include="Type\Color.cpp" />
     <ClCompile Include="Utility\Debug\dbgutl.cpp" />
     <ClCompile Include="Utility\FileSystem\fsutl.cpp" />
     <ClCompile Include="Utility\JSONIO\jsonio.cpp" />
@@ -300,8 +299,9 @@
     <ClCompile Include="Utility\String\strutl.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\CG\GameEngine_DX12\Engine\Features\Animation\AnimationTimeline.h" />
+    <ClInclude Include="..\..\..\..\..\CG\GameEngine_DX12\Engine\Features\Animation\AnimationTween.hpp" />
     <ClInclude Include="BaseClasses\ObjectSystemBaseMT.h" />
-    <ClInclude Include="ClassStyles\SingletonStyle.h" />
     <ClInclude Include="Common\define.h" />
     <ClInclude Include="Common\HRESULT_ASSERT.h" />
     <ClInclude Include="Common\structs.h" />
@@ -418,7 +418,6 @@
     <ClInclude Include="Presets\Object3d\Grid\Preset_Grid.h" />
     <ClInclude Include="Scene\Args\SceneArgs.h" />
     <ClInclude Include="Scene\SceneBase.h" />
-    <ClInclude Include="Type\Color.h" />
     <ClInclude Include="Utility\ConvertString\ConvertString.h" />
     <ClInclude Include="Utility\Debug\dbgutl.h" />
     <ClInclude Include="Utility\DIContainer\DIContainer.h" />
