--- a/.github/workflows/DebugBuildTest.yml
+++ b/.github/workflows/DebugBuildTest.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 env:
-  SOLUTION_FILE_PATH: Engine/GameEngine_DX12.sln
+  SOLUTION_FILE_PATH: src/GameEngine_DX12.sln
   CONFIGURATION: Debug
 
 jobs:
