--- a/src/Engine.vcxproj
+++ b/src/Engine.vcxproj
@@ -20,7 +20,7 @@
     <ProjectGuid>{9fd2d32d-dab0-40a1-b430-cbc12517b87c}</ProjectGuid>
     <RootNamespace>Engine</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Engine</ProjectName>
+    <ProjectName>NimaEngine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
